// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has clickable rows styles 1`] = `
.c1:focus {
  border-color: #006296;
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c1:hover {
  background-color: #DBDEE1;
  cursor: pointer;
}

.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      data-error="false"
      data-testid="table-row-0"
      role="button"
      tabindex="0"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      data-error="false"
      data-testid="table-row-1"
      role="button"
      tabindex="0"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c1"
      data-error="false"
      data-testid="table-row-2"
      role="button"
      tabindex="0"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has custom text alignment 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
        style="text-align:right"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
        style="text-align:center"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
        style="text-align:center"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
        style="text-align:center"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
        style="text-align:right"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
        style="text-align:center"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has desktop styles 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has error rows styles 1`] = `
.c1 {
  background-color: #fcf8f9;
}

.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      data-error="true"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      data-error="true"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has mobile styles 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) 0;
}

.c0 td {
  padding: var(--spacing-3x) 0;
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has rowNumbers styles 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class="eq-table__util-column"
        colspan="1"
        role="columnheader"
        scope="col"
      />
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class="eq-table__util-column"
        role="cell"
      >
        1
      </td>
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class="eq-table__util-column"
        role="cell"
      >
        2
      </td>
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class="eq-table__util-column"
        role="cell"
      >
        3
      </td>
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has selectable rows styles 1`] = `
.c6 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c8 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: 16px;
  left: 0;
  position: absolute;
  top: 4px;
  width: 16px;
}

.c4:hover {
  border: 1px solid #006296;
}

.c2 {
  height: 0;
  opacity: 0;
  position: absolute;
  width: 0;
}

.c2:checked + .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c2:checked + .c3 > .c5 {
  display: block;
}

.c2:indeterminate + .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c2:indeterminate + .c3 > .c7 {
  display: block;
}

.c2:focus + .c3 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c1 {
  cursor: pointer;
  display: block;
  line-height: 1.5rem;
  min-height: 24px;
  padding-left: 16px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:not(:first-of-type) {
  margin-top: var(--spacing-1x);
}

.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class="eq-table__util-column"
        colspan="1"
        role="columnheader"
        scope="col"
      >
        <label
          class="c1"
        >
          <input
            class="c2"
            type="checkbox"
          />
          <span
            class="c3 c4"
          >
            <svg
              class="c5 c6"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c7 c8"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class="eq-table__util-column"
        role="cell"
      >
        <label
          class="c1"
        >
          <input
            class="c2"
            type="checkbox"
          />
          <span
            class="c3 c4"
          >
            <svg
              class="c5 c6"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c7 c8"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class="eq-table__util-column"
        role="cell"
      >
        <label
          class="c1"
        >
          <input
            class="c2"
            type="checkbox"
          />
          <span
            class="c3 c4"
          >
            <svg
              class="c5 c6"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c7 c8"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class="eq-table__util-column"
        role="cell"
      >
        <label
          class="c1"
        >
          <input
            class="c2"
            type="checkbox"
          />
          <span
            class="c3 c4"
          >
            <svg
              class="c5 c6"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
            <svg
              class="c7 c8"
              color="currentColor"
              focusable="false"
              height="24"
              width="24"
            />
          </span>
        </label>
      </td>
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has small rowSize styles 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-half) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-1x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has sorting styles 1`] = `
.c2 {
  cursor: pointer;
  margin-right: var(--spacing-1x);
}

.c2:focus {
  outline: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="ascending"
        colspan="1"
        role="columnheader"
        scope="col"
        style="cursor:pointer"
        title="Toggle SortBy"
      >
        <div
          class="c1"
        >
          <button
            class="c2"
          >
            <svg
              color="#60666E"
              focusable="false"
              height="16"
              width="16"
            />
          </button>
          Column 1
        </div>
      </th>
      <th
        aria-sort="none"
        colspan="1"
        role="columnheader"
        scope="col"
        style="cursor:pointer"
        title="Toggle SortBy"
      >
        <div
          class="c1"
        >
          <button
            class="c2"
          >
            <svg
              color="#60666E"
              focusable="false"
              height="16"
              width="16"
            />
          </button>
          Column 2
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has striped styles 1`] = `
.c1:nth-child(odd) {
  background-color: #FAFAFA;
}

.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c0 td {
  padding: var(--spacing-2x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 0.875rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class="c1"
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class="c1"
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class="c1"
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table has tablet styles 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-collapse: separate;
  border-spacing: 0;
  width: 100%;
}

.c0 th {
  font-weight: var(--font-semi-bold);
  padding: var(--spacing-2x) var(--spacing-1x);
}

.c0 td {
  padding: var(--spacing-3x) var(--spacing-1x);
}

.c0 th.sticky {
  position: -webkit-sticky;
  position: sticky;
  background-color: #FFFFFF;
}

.c0 td.sticky {
  position: -webkit-sticky;
  position: sticky;
}

.c0 th,
.c0 td {
  font-size: 1rem;
  line-height: 24px;
  margin: 0;
  text-align: left;
}

.c0 .eq-table__util-column {
  box-sizing: border-box;
  color: #60666E;
  font-size: 0.75rem;
  min-width: 40px;
  text-align: center;
  width: 40px;
}

.c0 tr:first-child[data-error=false] td,
.c0 tr[data-error=false] + tr td {
  border-top: 1px solid #DBDEE1;
}

.c0 tr[data-error=false] + tr[data-error=true] td {
  border-top: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td {
  border-bottom: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:first-child {
  border-left: 1px solid #CD2C23;
}

.c0 tr[data-error=true] td:last-child {
  border-right: 1px solid #CD2C23;
}

<table
  class="c0"
  role="table"
>
  <thead>
    <tr
      role="row"
    >
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 1
      </th>
      <th
        class=""
        colspan="1"
        role="columnheader"
        scope="col"
      >
        Column 2
      </th>
    </tr>
  </thead>
  <tbody
    role="rowgroup"
  >
    <tr
      class=""
      data-error="false"
      data-testid="table-row-0"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        World
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-1"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Planet
      </td>
    </tr>
    <tr
      class=""
      data-error="false"
      data-testid="table-row-2"
      role="row"
    >
      <td
        class=""
        role="cell"
      >
        Hello
      </td>
      <td
        class=""
        role="cell"
      >
        Galaxy
      </td>
    </tr>
  </tbody>
</table>
`;
